[package]
name = "autometrics-am"
version = "0.1.0"
edition = "2021"
authors = ["Fiberplane <info@fiberplane.com>"]
description = ""
documentation = "https://docs.rs/autometrics-am"
repository = "https://github.com/autometrics-dev/am"
homepage = "https://autometrics.dev"
license = "MIT OR Apache-2.0"
keywords = ["metrics", "prometheus", "opentelemetry"]
categories = ["development-tools::profiling"]


[dependencies]
anyhow = { version = "1.0.71" }
axum = { version = "0.6.18" }
clap = { version = "4.2.7", features = ["derive", "env"] }
dialoguer = "0.10.4"
directories = { version = "5.0.1" }
flate2 = { version = "1.0.26" }
futures-util = { version = "0.3.28", features = ["io"] }
hex = "0.4.3"
http = { version = "0.2.9" }
include_dir = { version = "0.7.3" }
indicatif = "0.17.5"
once_cell = { version = "1.17.1" }
remove_dir_all = { version = "0.8.2" }
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = { version = "0.9.21" }
sha2 = "0.10.6"
tar = { version = "0.4.38" }
tempfile = { version = "3.5.0" }
tokio = { version = "1.28.1", features = ["full"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
url = { version = "2.3.1" }

[dev-dependencies]
rstest = { version = "0.17.0" }
