[workspace]
members = [
    "am",
    "am_list",
    "autometrics-am"
]
default-members = ["am"]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"
authors = ["Fiberplane <info@fiberplane.com>"]
documentation = "https://docs.rs/autometrics-am"
repository = "https://github.com/autometrics-dev/am"
homepage = "https://autometrics.dev"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.71"
humantime = "2.1.0"
serde = { version = "1.0.163", features = ["derive"] }
url = { version = "2.3.1", features = ["serde"] }
