[package]
name = "am"
description = "Autometrics Companion CLI app"
keywords = ["metrics", "prometheus", "opentelemetry"]
categories = ["development-tools::profiling"]
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
am_list = { path = "../am_list" }
anyhow = { workspace = true }
autometrics-am = { path = "../autometrics-am" }
axum = "0.6.18"
clap = { version = "4.2.7", features = ["derive", "env"] }
clap-markdown = { git = "https://github.com/keturiosakys/clap-markdown.git" }
dialoguer = "0.10.4"
directories = "5.0.1"
flate2 = "1.0.26"
futures-util = { version = "0.3.28", features = ["io"] }
hex = "0.4.3"
http = "0.2.9"
humantime = { workspace = true }
include_dir = "0.7.3"
indicatif = "0.17.5"
itertools = "0.11.0"
octocrab = "0.29.3"
once_cell = "1.17.1"
open = "5.0.0"
rand = "0.8.5"
remove_dir_all = "0.8.2"
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls", "stream"] }
self-replace = "1.3.5"
semver_rs = "0.2.0"
serde = { workspace = true }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
sha2 = "0.10.6"
tar = "0.4.38"
tempfile = "3.5.0"
thiserror = "1.0.48"
tokio = { version = "1.28.1", features = ["full"] }
toml = "0.7.4"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
url = { workspace = true }

[dev-dependencies]
rstest = "0.18.2"
